# unihist

./: README.md  histogram.ipynb  pyproject.toml
src/: CMakeLists.txt  hist_almost_uniform.py  hist_random.py  hist_worst.py  random_choice.py  setup.py
src/alternatives/: IMPLEMENTATION_SUMMARY.md  Makefile  README_VARPHILOX.md  example_cuda_usage.cu  fisher.py  test_varphilox  test_varphilox.cpp  varphilox  varphilox.cpp  varphilox.cu  varphilox.h  varphilox.py
src/cpp/: hist_sycl.cpp
src/fast_histogram/: bin_gen.py  hist_runner.py  hist_scalar.py  hist_wrapper.py  random_choice.py  random_choice_scalar.py  rng_runner.py  rng_wrappers.py
src/misc/: fragments_paper.cpp  hist.cpp
test/: test.py
